--- a/src/Bloodmatch/UserBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Bloodmatch/UserBundle/Resources/views/Profile/show_content.html.twig
@@ -4,5 +4,7 @@
 <div class="fos_user_user_show">
     <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
     <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+    <p>Name: {{ user.name }}</p>
+    <p>Blood Type: {{ user.bloodtype }}</p>
 </div>
 <a href="{{ path('fos_user_profile_edit') }}">Edit Profile</a>
